chore: update code

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -25,6 +25,7 @@
         android:id="@+id/bttom_nav"
         app:menu="@menu/bottom_menu"
         app:labelVisibilityMode="unlabeled"
+        app:itemHorizontalTranslationEnabled="false"
         app:layout_behavior="com.google.android.material.behavior.HideBottomViewOnScrollBehavior"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
