--- a/app/src/main/res/xml/root_preferences.xml
+++ b/app/src/main/res/xml/root_preferences.xml
@@ -75,6 +75,12 @@
             app:summary="@string/load_additional_anime_information_summary"
             app:title="@string/load_additional_anime_information_title" />
 
+        <Preference
+            app:icon="@drawable/ic_code"
+            app:key="pref_key_hikka_login"
+            app:summary="@string/hikka_login"
+            app:title="Hikka"></Preference>
+
     </PreferenceCategory>
     <PreferenceCategory android:title="@string/about">
 
