--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -11,7 +11,6 @@
 	<dimen name="layout_padding_start">16dp</dimen>
 	<dimen name="layout_padding_top">16dp</dimen>
 	<dimen name="list_horizontal_padding">16dp</dimen>
-	<dimen name="list_vertical_padding">16dp</dimen>
 	<dimen name="layout_padding_small">8dp</dimen>
 	<dimen name="layout_padding">16dp</dimen>
 	<dimen name="gradient_height">100dp</dimen>
@@ -20,4 +19,6 @@
 
 	<dimen name="dots_radius">3dp</dimen>
 	<dimen name="dots_height">5dp</dimen>
+	<dimen name="list_item_height">56dp</dimen>
+	<dimen name="list_vertical_padding">8dp</dimen>
 </resources>
