--- a/app/src/main/res/layout/item_torrent.xml
+++ b/app/src/main/res/layout/item_torrent.xml
@@ -1,133 +1,135 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout
-     xmlns:android="http://schemas.android.com/apk/res/android"
-     xmlns:app="http://schemas.android.com/apk/res-auto"
-     android:layout_height="wrap_content"
-     android:layout_width="fill_parent"
-     android:orientation="vertical"
-     android:paddingEnd="16dp"
-     android:paddingStart="16dp"
-     android:paddingTop="8dp">
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="fill_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical"
+    android:paddingStart="16dp"
+    android:paddingTop="8dp"
+    android:paddingEnd="16dp">
 
     <TextView
-         android:layout_height="wrap_content"
-         android:layout_width="wrap_content"
-         android:layout_marginBottom="8dp"
-         android:textSize="15sp"
-         android:textColor="?textColorPrimary"
-         android:layout_weight="1.0"
-         android:id="@+id/title" />
+        android:id="@+id/title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="8dp"
+        android:layout_weight="1.0"
+        android:textColor="?textColorPrimary"
+        android:textSize="15sp"
+        tools:text="Текст" />
 
     <LinearLayout
-         android:layout_height="wrap_content"
-         android:layout_width="fill_parent"
-         android:orientation="horizontal">
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
 
         <LinearLayout
-             android:layout_height="wrap_content"
-             android:layout_width="wrap_content"
-			 android:gravity="start|center"
-             android:orientation="horizontal">
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:gravity="start|center"
+            android:orientation="horizontal">
 
             <TextView
-                 android:layout_height="wrap_content"
-                 android:layout_width="wrap_content"
-                 android:textSize="13sp"
-                 android:textColor="?textColorSecondary"
-                 android:id="@+id/size" />
+                android:id="@+id/size"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:textColor="?textColorSecondary"
+                android:textSize="13sp" />
 
             <TextView
-                 android:layout_height="wrap_content"
-                 android:layout_width="wrap_content"
-                 android:paddingRight="8dp"
-                 android:textSize="13sp"
-                 android:textColor="?textColorSecondary"
-                 android:paddingLeft="8dp"
-                 android:layout_weight="1.0"
-                 android:text="•" />
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="1.0"
+                android:paddingLeft="8dp"
+                android:paddingRight="8dp"
+                android:text="•"
+                android:textColor="?textColorSecondary"
+                android:textSize="13sp" />
 
             <ImageView
-                 android:layout_height="18dp"
-                 android:layout_width="18dp"
-                 android:src="@drawable/ic_cloud_download"
-                  />
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:src="@drawable/ic_cloud_download" />
 
             <TextView
-                 android:layout_height="wrap_content"
-                 android:layout_width="wrap_content"
-                 android:layout_marginStart="8dp"
-                 android:textSize="13sp"
-                 android:textColor="?textColorSecondary"
-                 android:singleLine="true"
-                 android:id="@+id/download_count" />
+                android:id="@+id/download_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:singleLine="true"
+                android:textColor="?textColorSecondary"
+                android:textSize="13sp" />
 
         </LinearLayout>
 
         <LinearLayout
-             android:layout_height="wrap_content"
-             android:layout_width="fill_parent"
-             android:layout_marginBottom="8dp"
-             android:gravity="end|center"
-             android:orientation="horizontal">
+            android:layout_width="fill_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginBottom="8dp"
+            android:gravity="end|center"
+            android:orientation="horizontal">
 
             <ImageView
-                 android:layout_height="18dp"
-                 android:layout_width="18dp"
-                 android:src="@drawable/ic_up"
-                 app:tint="@color/material_green" />
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:src="@drawable/ic_up"
+                app:tint="@color/material_green" />
 
             <TextView
-                 android:layout_height="wrap_content"
-                 android:layout_width="wrap_content"
-                 android:layout_marginEnd="8dp"
-                 android:textSize="13sp"
-                 android:fontFamily="@font/roboto_medium"
-                 android:textColor="@color/material_green"
-                 android:singleLine="true"
-                 android:id="@+id/seed_count" />
+                android:id="@+id/seed_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="8dp"
+                android:fontFamily="@font/roboto_medium"
+                android:singleLine="true"
+                android:textColor="@color/material_green"
+                android:textSize="13sp"
+                tools:text="1" />
 
             <ImageView
-                 android:layout_height="18dp"
-                 android:layout_width="18dp"
-                 android:src="@drawable/ic_down"
-                 app:tint="@color/material_red" />
+                android:layout_width="18dp"
+                android:layout_height="18dp"
+                android:src="@drawable/ic_down"
+                app:tint="@color/material_red" />
 
             <TextView
-                 android:layout_height="wrap_content"
-                 android:layout_width="wrap_content"
-                 android:textSize="13sp"
-                 android:fontFamily="@font/roboto_medium"
-                 android:textColor="@color/material_red"
-                 android:singleLine="true"
-                 android:id="@+id/leech_count" />
+                android:id="@+id/leech_count"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/roboto_medium"
+                android:singleLine="true"
+                android:textColor="@color/material_red"
+                android:textSize="13sp"
+                tools:text="99" />
 
         </LinearLayout>
 
     </LinearLayout>
 
     <LinearLayout
-         android:layout_height="fill_parent"
-         android:layout_width="fill_parent"
-         android:layout_marginBottom="12dp"
-         android:gravity="end"
-         android:orientation="horizontal">
+        android:layout_width="fill_parent"
+        android:layout_height="fill_parent"
+        android:layout_marginBottom="12dp"
+        android:gravity="end"
+        android:orientation="horizontal">
 
         <Button
-             android:layout_height="wrap_content"
-             android:layout_width="wrap_content"
-             app:icon="@drawable/ic_magnet"
-             android:layout_marginEnd="8dp"
-             style="?attr/materialIconButtonStyle"
-             android:id="@+id/magnet_link"
-             android:contentDescription="@string/download_magnet" />
+            android:id="@+id/magnet_link"
+            style="?attr/materialIconButtonStyle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="8dp"
+            android:contentDescription="@string/download_magnet"
+            app:icon="@drawable/ic_magnet" />
 
         <com.google.android.material.button.MaterialButton
-             android:layout_height="wrap_content"
-             android:layout_width="wrap_content"
-             style="@style/Widget.Material3.Button.UnelevatedButton"
-             android:id="@+id/torrent_link"
-             app:icon="@drawable/ic_download_for_offline"
-             android:text="@string/download_torrent_file" />
+            android:id="@+id/torrent_link"
+            style="@style/Widget.Material3.Button.UnelevatedButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="@string/download_torrent_file"
+            app:icon="@drawable/ic_download_for_offline" />
 
     </LinearLayout>
 
