--- a/app/src/main/res/layout/layout_release_action.xml
+++ b/app/src/main/res/layout/layout_release_action.xml
@@ -7,136 +7,19 @@
     android:baselineAligned="true"
     android:gravity="center_horizontal"
     android:orientation="horizontal">
-    <!-- <androidx.recyclerview.widget.RecyclerView -->
-    <!-- android:layout_height="wrap_content" -->
-    <!-- android:layout_width="fill_parent" -->
-    <!-- android:overScrollMode="never" -->
-    <!-- android:clipToPadding="false" -->
-    <!-- android:orientation="horizontal" -->
-    <!-- android:id="@+id/rv_actions" -->
-    <!-- app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager" /> -->
-    <LinearLayout
-        android:id="@+id/status_container"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_margin="8dp"
-        android:background="@drawable/transparent_circle_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="visible">
 
-        <ImageView
-            android:id="@+id/status"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:srcCompat="@drawable/ic_add"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/watch_status_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/release_action_add_to_list"
-            android:textAppearance="?attr/textAppearanceLabelSmall" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/bookmark_container"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_margin="8dp"
-        android:background="@drawable/transparent_circle_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <ImageView
-            android:id="@+id/bookmark"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:srcCompat="@drawable/ic_bookmark_border"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:id="@+id/bookmark_status_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/release_action_add_to_bookmarks"
-            android:textAppearance="?attr/textAppearanceLabelSmall" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/share_container"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_margin="8dp"
-        android:background="@drawable/transparent_circle_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        tools:visibility="visible">
-
-        <ImageView
-            android:id="@+id/share"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:srcCompat="@drawable/ic_share"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/action_share"
-            android:textAppearance="?attr/textAppearanceLabelSmall" />
-
-    </LinearLayout>
-
-    <LinearLayout
-        android:id="@+id/download_torrent_container"
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:layout_margin="8dp"
-        android:background="@drawable/transparent_circle_background"
-        android:clickable="true"
-        android:focusable="true"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        android:visibility="gone"
-        tools:visibility="visible">
-
-        <ImageView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="8dp"
-            android:layout_marginBottom="8dp"
-            app:srcCompat="@drawable/ic_torrent_file"
-            tools:ignore="ContentDescription" />
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:text="@string/download_torrent"
-            android:textAppearance="?attr/textAppearanceLabelSmall" />
-
-    </LinearLayout>
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rv_actions"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clipToPadding="false"
+        android:overScrollMode="never"
+        android:paddingStart="4dp"
+        android:paddingEnd="4dp"
+        android:orientation="horizontal"
+        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
+        tools:itemCount="4"
+        tools:listitem="@layout/list_item_action"
+        tools:orientation="horizontal" />
 
 </LinearLayout>
