--- a/app/src/main/res/layout/item_screenshot.xml
+++ b/app/src/main/res/layout/item_screenshot.xml
@@ -1,23 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:layout_height="124dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="224dp"
+    android:layout_height="124dp"
     android:layout_margin="8dp"
     android:clipToPadding="false">
 
     <androidx.cardview.widget.CardView
-        android:layout_height="fill_parent"
-        android:layout_width="fill_parent"
-        app:cardElevation="0dp"
-        app:cardCornerRadius="16dp">
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        app:cardCornerRadius="16dp"
+        app:cardElevation="0dp">
+
+        <com.google.android.material.progressindicator.CircularProgressIndicator
+            android:id="@+id/progress_indicator"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:indeterminate="true"
+            android:visibility="gone"
+            app:indicatorSize="40dp"
+            app:trackThickness="20dp"
+            tools:visibility="visible" />
 
         <com.google.android.material.imageview.ShapeableImageView
-            android:layout_height="fill_parent"
-            android:layout_width="fill_parent"
+            android:id="@+id/siv_screenshot"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:scaleType="centerCrop"
-            android:id="@+id/siv_screenshot" />
+            android:visibility="visible"
+            tools:visibility="visible"
+            tools:src="@tools:sample/backgrounds/scenic" />
 
     </androidx.cardview.widget.CardView>
 
-</FrameLayout>
+</RelativeLayout>
