--- a/app/src/main/res/layout/item_home_action.xml
+++ b/app/src/main/res/layout/item_home_action.xml
@@ -1,51 +1,51 @@
 <?xml version="1.0" encoding="utf-8"?>
-<com.google.android.material.card.MaterialCardView
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 xmlns:tools="http://schemas.android.com/tools"
-	 android:layout_height="72dp"
-	 android:layout_width="match_parent"
-	 android:clickable="true"
-	 app:cardUseCompatPadding="true"
-	 app:cardCornerRadius="16dp"
-	 android:focusable="true">
+<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
+    android:layout_height="72dp"
+    android:clickable="true"
+    android:focusable="true"
+    app:cardCornerRadius="16dp"
+    app:cardUseCompatPadding="true">
 
-	<ImageView
-		 android:layout_height="match_parent"
-		 android:layout_width="match_parent"
-		 android:scaleType="centerCrop"
-		 tools:src="@tools:sample/backgrounds/scenic"
-		 tools:ignore="ContentDescription"
-		 android:id="@+id/action_bg" />
+    <ImageView
+        android:id="@+id/action_bg"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:scaleType="centerCrop"
+        tools:ignore="ContentDescription"
+        tools:src="@tools:sample/backgrounds/scenic" />
 
-	<View
-		 android:layout_height="match_parent"
-		 android:layout_width="match_parent"
-		 android:background="@color/black"
-		 android:alpha="0.75" />
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:alpha="0.75"
+        android:background="@color/black" />
 
-	<LinearLayout
-		 android:layout_height="wrap_content"
-		 android:layout_width="wrap_content"
-		 android:orientation="vertical"
-		 android:layout_gravity="center">
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:orientation="vertical">
 
-		<TextView
-			 android:layout_height="wrap_content"
-			 android:layout_width="wrap_content"
-			 android:fontFamily="@font/roboto_bold"
-			 android:textSize="14sp"
-			 android:textAllCaps="true"
-			 android:textColor="@color/white"
-			 android:layout_gravity="center"
-			 android:id="@+id/action_name" />
+        <TextView
+            android:id="@+id/action_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:fontFamily="@font/roboto_bold"
+            android:textAllCaps="true"
+            android:textColor="@color/white"
+            android:textSize="14sp"
+            tools:text="Календар" />
 
-		<View
-			 android:layout_height="2dp"
-			 android:layout_width="64dp"
-			 android:background="?attr/colorPrimary"
-			 android:layout_gravity="center" />
+        <View
+            android:layout_width="64dp"
+            android:layout_height="2dp"
+            android:layout_gravity="center"
+            android:background="?attr/colorPrimary" />
 
-	</LinearLayout>
+    </LinearLayout>
 
 </com.google.android.material.card.MaterialCardView>
