--- a/app/src/main/res/layout/layout_home_anime_list.xml
+++ b/app/src/main/res/layout/layout_home_anime_list.xml
@@ -1,11 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.recyclerview.widget.RecyclerView
-	 xmlns:android="http://schemas.android.com/apk/res/android"
-	 xmlns:app="http://schemas.android.com/apk/res-auto"
-	 xmlns:tools="http://schemas.android.com/tools"
-	 android:layout_height="wrap_content"
-	 android:layout_width="match_parent"
-	 android:paddingEnd="2dp"
-	 android:clipToPadding="false"
-	 android:paddingStart="2dp"
-	 android:id="@+id/anime_list_rv"/>
+<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/anime_list_rv"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:clipToPadding="false"
+    android:paddingStart="2dp"
+    android:paddingEnd="2dp"
+    tools:itemCount="2"
+    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
+    tools:listitem="@layout/item_home_action" />
