--- a/app/src/main/res/layout/layout_new_collections.xml
+++ b/app/src/main/res/layout/layout_new_collections.xml
@@ -38,4 +38,10 @@
 		android:orientation="horizontal"
 		tools:listitem="@layout/item_collection"/>
 
+	<View
+		android:layout_height="0.5dp"
+		android:layout_width="wrap_content"
+		android:layout_marginEnd="16dp"
+		android:layout_marginTop="16dp"
+		android:layout_marginStart="16dp" />
 </LinearLayout>
